# RHGPE

./: CMakeLists.txt  Geomentry.cpp  Geomentry.h  README.md  RHGPE.cpp  RHGPE.h  main.cpp  point3.ply
